Fixed carousel image overflow problem

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -4,8 +4,11 @@
   object-fit: contain;
   padding: 10px;
 }
+
 .carouselItem__img {
   border-radius: 10px;
+  height: 150px;
+  width: 100px;
   margin-bottom: 5px;
   box-shadow: 0px 0px 5px black;
 }
